feat: optimize performance of etymology endpoint
